create github pages

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a website for free</a></section><section class="header3 cid-s0hNEG1d92 mbr-parallax-background" id="header3-2">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header3 cid-s0hNEG1d92 mbr-parallax-background" id="header3-2">
 
     
 
@@ -219,17 +219,16 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-12 col-lg-8">
-                <h2 class="align-center pb-2 mbr-fonts-style display-2"><strong>
+                <h2 class="align-center pb-2 mbr-fonts-style display-5"><strong>
                     DOMÍNIO</strong>&nbsp;<strong>&amp;</strong>&nbsp;<strong>HOSPEDAGEM</strong>`<strong>GRÁTIS</strong></h2>
-                <h3 class="mbr-section-subtitle align-center pb-5 mbr-light mbr-fonts-style display-7">
-                    Investindo em um site, ou loja virtual a hospedagem e o seu domínio é grátis <br>um ano inteiro!</h3>
+                <h3 class="mbr-section-subtitle align-center pb-5 mbr-light mbr-fonts-style display-7">Web sites, loja virtual, layout, design mais funcionalidades com registro de domínio e hospedagem grátis.</h3>
             </div>
         </div>
 
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GEvBnIYQt21hq3y/j0I7T5ZZgrLdqiSvqd77Zam3baNxJCZYlX8gVw8vZo5YB7FHGDSCEvUJG18PQALNsmxOreyhUxlgCRpSMqn2XUb/52x3HxdqPxHOuqb/umqkW+nt">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="77cwaD77LIgPFLVzmSmYv9PW61FYLfOTbFFbHTCBzvuXqoRjj5XcZk21qft0/AfzrEkHMyf8mmn7wClJjSQoaL4KKhkf5sEAWG+Jv7oBiOJUDJQihvuQTjl6qPxlkmEg">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos seu e-mail aguarde informações de nossas promoções!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -320,8 +319,8 @@
     <div class="container">
         <div class="inner-container" style="width: 95%;">
             <hr class="line" style="width: 100%;">
-            <div class="section-text align-center mbr-white mbr-fonts-style display-2">
-                    Tudo pensado no modelo, e necessidade de seu negócio.</div>
+            <div class="section-text align-center mbr-white mbr-fonts-style display-2"><em>
+                    Tudo pensado no modelo, e necessidade de seu negócio.</em></div>
             <hr class="line" style="width: 100%;">
         </div>
     </div>
@@ -346,7 +345,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0ShGi27H2YZOBzv6AcWUUwmrwY6xA6SOB0GyKl4z8IMTc3qSrzbxcBthcrsoCINaoqe2Q1RkM7TwlqfHc1+NazlNhYLPp7EadD9zbbwaJW5dRy5PIHyARotG9ufl2k1v">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EhBAQ9nHqMk334xuJghBRqojjmskSwh6qT0tFHXnr1ImCEX9Cm+qgiYhElIDq59QVHVJW/lGfdfdlXBXyMBPnJIEGY8YLAJ9Y9RMTPjB6AZP049jeY3E+xVHm8szjmQC">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos sua mensagem, e em muito breve responderemos.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -354,22 +353,22 @@
                     </div>
                     <div class="dragArea row">
                         <div class="col-md-4  form-group" data-for="name">
-                            <label for="name-form1-8" class="form-control-label mbr-fonts-style display-7"><strong>✎ Nome</strong></label>
+                            <label for="name-form1-8" class="form-control-label mbr-fonts-style display-7">✎ Nome</label>
                             <input type="text" name="name" data-form-field="Name" required="required" class="form-control display-7" id="name-form1-8">
                         </div>
                         <div class="col-md-4  form-group" data-for="email">
-                            <label for="email-form1-8" class="form-control-label mbr-fonts-style display-7"><strong>✉ E-mail</strong></label>
+                            <label for="email-form1-8" class="form-control-label mbr-fonts-style display-7">✉ E-mail</label>
                             <input type="email" name="email" data-form-field="Email" required="required" class="form-control display-7" id="email-form1-8">
                         </div>
                         <div data-for="phone" class="col-md-4  form-group">
-                            <label for="phone-form1-8" class="form-control-label mbr-fonts-style display-7"><strong>✆ Tel./WhatsApp.</strong></label>
+                            <label for="phone-form1-8" class="form-control-label mbr-fonts-style display-7">✆ Tel./WhatsApp.</label>
                             <input type="tel" name="phone" data-form-field="Phone" class="form-control display-7" id="phone-form1-8">
                         </div>
                         <div data-for="message" class="col-md-12 form-group">
-                            <label for="message-form1-8" class="form-control-label mbr-fonts-style display-7"><strong>⎙ Mensagem</strong></label>
+                            <label for="message-form1-8" class="form-control-label mbr-fonts-style display-7">⎙ Mensagem</label>
                             <textarea name="message" data-form-field="Message" class="form-control display-7" id="message-form1-8"></textarea>
                         </div>
-                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-form btn-black-outline display-4" href="page1.html#features9-e">Enviar agora</button></div>
+                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-form btn-black display-4" href="page1.html#features9-e">ENVIAR AGORA</button></div>
                     </div>
                 </form><!---Formbuilder Form--->
             </div>
