--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -74,7 +74,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="header3 cid-s0hNEG1d92 mbr-parallax-background" id="header3-2">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header3 cid-s0hNEG1d92 mbr-parallax-background" id="header3-2">
 
     
 
@@ -228,7 +228,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WC2jkhWSfILH6dATDKEj9p2zzctd6ehqdNh3psTMW1sg2Ok3wX2rNvS9MnJdiAAmff5quamLiO7Mabd9BFLCkua2aZWurrBQW3ihMxdToq4LPsrRiExkjMGQEY9TbMvt">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6IhcxnEQ7J92RMkgFSvTr0s61mZZe3LJ/f4bt9FyG+I/a6SwOd+eimlNByZN54bPeYdIhGpwJCr9wbtTymlUCuuiK/swB/SdAycyRWPvva72KMtucbz28iZPfK/yFLSE">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos seu e-mail aguarde informações de nossas promoções!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -261,9 +261,9 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
-                        Web Sites &amp; Sistemas</h4>
+                        Web Sites<strong> &amp; Sistemas</strong></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                        Sites e sistema de administração e gerenciamento, com páginas <strong>adaptáveis a qualquer dispositivo</strong>, com aplicações específicas para cada modelo de negócio ou necessidade. Sites otimizados, SEO. <br><br><br></p>
+                        Sites e sistema de administração e gestão, com páginas <strong>adaptáveis a qualquer dispositivo</strong>, com aplicações <strong>específicas</strong> para cada modelo de negócio ou necessidade. SEO, Google Adsense<br><br><br></p>
                 </div>
             </div>
 
@@ -273,7 +273,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
-                        Loja Virtual</h4>
+                        Loja <strong>Virtual</strong></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                         Plataforma integrada com redes sociais, <strong>painel de muito fácil administração</strong>, com formas de pagamentos online, calculo de fretes, cadastros, rastreamento de pedidos, e campanhas de marketing direcionada. 
                     </p>
@@ -286,7 +286,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
-                        Domínio &amp; Host</h4>
+                        Domínio <strong>&amp; Host</strong></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                         A melhor opção, hospedagem ou armazenamento em nuvem com multiplataformas para windows, Linux, Wordpress, suporte para PHP, servidores dedicados <strong>agilidade e suporte 24hrs/7dias</strong>. 
                     </p>
@@ -299,7 +299,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
-                        Mídia Digital</h4>
+                        Mídia <strong>Digital</strong></h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                        Google adwords, Bing e Yahoo, campanhas de incentivo, <strong>ativação da marca, </strong>geração de tráfego qualificado, <strong>aumento de conversão e vendas</strong>, endomarketing, <strong>KPIs de performance</strong> e monitoria.
                     </p>
@@ -345,7 +345,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="cnQN7Tym75bILL8YrVOF91sjZXMjDVW9hPFdtMrNSsY4AdDxNX309j+G/8lv/z2T8+UgoIqG7fZPJQmMkcLqw5r5//dGXemrp7aEQwvDAq+iJ9e23SsVzmEHLewN9En7">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pKL4qwPEW2Gk64HdGOAx7OOHjng1hA2U/Jndo6G0fvnbgIRevI0d2KAzP0+QIUPcQiAy3dw+hytZKjS6RX5uulkq2RdAN61xhxPo2D8/syujaDRaHmBa6Ha4/UvKLEyJ">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos sua mensagem, e em muito breve responderemos.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -449,19 +449,22 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
+  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
   <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>
   <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
   <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/tether/tether.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-</body>
+<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Agree' data-cookie-colorButton='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
+  </body>
 </html>
