--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -74,7 +74,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="header3 cid-s0hNEG1d92 mbr-parallax-background" id="header3-2">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="header3 cid-s0hNEG1d92 mbr-parallax-background" id="header3-2">
 
     
 
@@ -228,7 +228,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yrotYYb+zPjorippt8F2aJLGnbJ7oInQx8k/35NDa/XhWlQIsDpJTf5bohdZ45NVguOZA+U7zm7C0gvCiBB+pi+tnXPIDFLgJEbsZRQqviI21SpasrquzYeUM4W27HwM">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2PRgrMRXR1joAaXRuW2lUNaMi84FLVb9NFLH6Jeu2+MO5dO1N/AkMS2uE48VLJxJcdSeAxU3TJeZrm08sfoosALUZDV7vv5SABEmdPcYAM3Ip9RfkoAaUyURjYm4iTLj">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos seu e-mail aguarde informações de nossas promoções!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -345,7 +345,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vu38kcQP56sTuCn/p0iSu5TO/cEJYfe1o1fH/I8ZnOLM0tkhHaLfOAdQI1KDcJ1NjECgeG9QlJekkvxLrAL0/IXpVSxRoOEoyTAp6cu2kRjbWwPIEMoqkKs/vh/j4lBr">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="u6Udy1uMkY7h2vYElJhipUX20NpCCq7qI5H/4XSy9Ad8WCPnJgl3fV4w7hWQbCJCdqGj7u3LLVMxlV30UZGyS/b/Af/x2iysXZA3xdFfk+aFNygdQxcXqeaTQ8EZGHug">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos sua mensagem, e em muito breve responderemos.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -449,22 +449,19 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
-  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
-  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
+  <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
   <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>
   <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
   <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Eu concordo' data-cookie-colorButton='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="Utilizamos cookies para melhorar a experiência de nossos usuários ">
-  </body>
+</body>
 </html>
