--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -74,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best css templates</a></section><section class="header3 cid-s0hNEG1d92 mbr-parallax-background" id="header3-2">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="header3 cid-s7RdN5ayj9 mbr-parallax-background" id="header3-x">
 
     
 
@@ -91,7 +90,7 @@
                 <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1"><br>Sua empresa <strong>na internet</strong></h1>
                 
                 <div class="mbr-section-text mbr-white pb-3 ">
-                    <p class="mbr-text mbr-fonts-style display-7"><em>Soluções <strong>criativas</strong>, sites, sistemas de gerenciamento e administração, loja virtual, <strong>aplicações mobile</strong> e mais...</em></p>
+                    <p class="mbr-text mbr-fonts-style display-7"><em>Soluções <strong>criativas</strong>, para você e sua empresa atuar de forma eficaz na web</em></p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="index.html#features1-5">Serviços</a></div>
             </div>
@@ -228,7 +227,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yphPv+S39NaubBg+U9Y8cxarodszmtpg8YOO4M/YBPiV+uTP53np6OYRwoD/y0SGnHCGT6BuuNN++aB3vFcWElKuwwT45GQJhytJV9Z2/6l8+NPnW27UfybQiU/hfXy3">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EN7R9bkYtJXz6Q69uz9mgvDmSdvRUzQVV5tidCMCQEfXsDwSfzzjySP0L6yPfA0EN1R7eDYwNkbnK7/TVbsoFCuT3WZgKXsMx1zU9DHU3fqYTRcxrBQWjoZx1G+l/H4A">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos seu e-mail aguarde informações de nossas promoções!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -351,7 +350,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4PxPZL0oNLCTcrqJCmZZ1nBH0BO5oTOA6kWWJxRBd297ZFcFb/87z6OoT3I/tW6Ih5fPkeZ9DHHTlSmO7Khw/YYdSdp8CD67/BBXxDmkQnDuanbB07PD7xl1LqrG/eSz">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="FAqTRS8K3h4o9AqcoP0XfxFQBFfQmzqY3GaOBgCDkPgV6yrhCR1y3OScfQT3vyc3ipG5PdCiKOtoqatlCQaKHGTfJDtadg+YGGBWwkQgUE8IIJtAWQp2fSMGLJGglh2w">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos sua mensagem, e em muito breve responderemos.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
