create github pages

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="header3 cid-s7RdN5ayj9 mbr-parallax-background" id="header3-x">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="header3 cid-s7RdN5ayj9 mbr-parallax-background" id="header3-x">
 
     
 
@@ -227,7 +227,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Qy3Rv7aO1SswVooy+HqwxcTKJ111K4Kb9Dlivob+F47jE9IGsTZthoN0pEGvIuMtSq38CwtoRP4sAePgpUki25Lpn61PK2nDLClXus2JvFiIRr7P3CxsGZZ9VV6DsrDq">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="I8xteyQyF6fR/6MDtHe9v1qL1KmH/bg35Zgieh3DhqzCFONIJph163kCrZtuGF4s7Gnv7RWMZE4JsNLdwoVkdWlG7gJeVXztIl5eINS3uLiewxaM4JMQt68NGN67PMg7">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos seu e-mail aguarde informações de nossas promoções!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -340,8 +340,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-12 col-lg-8">
-                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">
-                    Vamos conversar 💭</h2>
+                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2"><strong><em>
+                    Vamos conversar</em> 💭</strong></h2>
                 
             </div>
         </div>
@@ -350,7 +350,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IbG21+4ZPeiIOP9bmL2QXvkZ+Sh4F54p3kmskONL7UL3SkuzBBXjisoJ3IHV7Ia5EcEspBFykk+3X/S2jTz2YtHrGMDmigcVP6RKFlIutmuzTGKE3luteaik9wAnCgn9">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GAJb/CzqmLzixLqSqrhWyyF2eHXUEVJjEwKzwtbVh4ydW5bQZSyF8qNloriSWBzQsCjm9g6FJh4qY1m88HNj/ntDY9AnTPBYbTxXEAIUJE6OCSoWYDdb0QvPF6msQuP1">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos sua mensagem, e em muito breve responderemos.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -358,19 +358,19 @@
                     </div>
                     <div class="dragArea row">
                         <div class="col-md-4  form-group" data-for="name">
-                            <label for="name-form1-8" class="form-control-label mbr-fonts-style display-7">✎ Nome</label>
+                            <label for="name-form1-8" class="form-control-label mbr-fonts-style display-7"><strong>✎<em> Nome</em></strong></label>
                             <input type="text" name="name" data-form-field="Name" required="required" class="form-control display-7" id="name-form1-8">
                         </div>
                         <div class="col-md-4  form-group" data-for="email">
-                            <label for="email-form1-8" class="form-control-label mbr-fonts-style display-7">✉ E-mail</label>
+                            <label for="email-form1-8" class="form-control-label mbr-fonts-style display-7"><strong>✉ <em>E-mail</em></strong></label>
                             <input type="email" name="email" data-form-field="Email" required="required" class="form-control display-7" id="email-form1-8">
                         </div>
                         <div data-for="phone" class="col-md-4  form-group">
-                            <label for="phone-form1-8" class="form-control-label mbr-fonts-style display-7">✆ Tel./WhatsApp.</label>
+                            <label for="phone-form1-8" class="form-control-label mbr-fonts-style display-7"><strong>✆ <em>Tel./WhatsApp</em></strong>.</label>
                             <input type="tel" name="phone" data-form-field="Phone" class="form-control display-7" id="phone-form1-8">
                         </div>
                         <div data-for="message" class="col-md-12 form-group">
-                            <label for="message-form1-8" class="form-control-label mbr-fonts-style display-7">⎙ Mensagem</label>
+                            <label for="message-form1-8" class="form-control-label mbr-fonts-style display-7"><strong>⎙<em> Sua mensagem</em></strong></label>
                             <textarea name="message" data-form-field="Message" class="form-control display-7" id="message-form1-8"></textarea>
                         </div>
                         <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-form btn-black display-4" href="page1.html#features9-e">ENVIAR AGORA</button></div>
