create github pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/index-meta.png">
   <meta name="twitter:title" content="WD Agência Digital  | Desenvolvimento de sites, loja virtual, ecommerce e sistemas - Desde 2007">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo.wd-608x363.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/wd.googlemeunegocioperfil-128x128.png" type="image/x-icon">
   <meta name="description" content="Soluções criativas para você e sua empresa na web -  websites, loja virtual, aplicações mobile, e mais... Tudo pensado no modelo de seu negócio. ">
   
   
@@ -47,7 +47,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html#footer5-9">
-                         <img src="assets/images/logo.wd-608x363.png" alt="Like`Web - Desenvolvendo desde 2007" title="Like`Web - Desenvolvendo desde 2007" style="height: 5.4rem;">
+                         <img src="assets/images/logo.cabecariowd-668x190.png" alt="Like`Web - Desenvolvendo desde 2007" title="Like`Web - Desenvolvendo desde 2007" style="height: 5.4rem;">
                     </a>
                 </span>
                 
@@ -73,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="header3 cid-s7RdN5ayj9 mbr-parallax-background" id="header3-x">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="header3 cid-s7RdN5ayj9 mbr-parallax-background" id="header3-x">
 
     
 
@@ -227,7 +227,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="I8xteyQyF6fR/6MDtHe9v1qL1KmH/bg35Zgieh3DhqzCFONIJph163kCrZtuGF4s7Gnv7RWMZE4JsNLdwoVkdWlG7gJeVXztIl5eINS3uLiewxaM4JMQt68NGN67PMg7">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HXmDwKXWWOtDAATbihCgcms12c+CU/RMXJbTDM8Vdv67fFG4OhjyXjFNuKDP/lvoYDGIt6fGggD2J2qo3+40Wx76Uv4J3YkxBdOKxnR+u+yz5os+2Oayj0CmWmAT3E+W">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos seu e-mail aguarde informações de nossas promoções!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -350,7 +350,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GAJb/CzqmLzixLqSqrhWyyF2eHXUEVJjEwKzwtbVh4ydW5bQZSyF8qNloriSWBzQsCjm9g6FJh4qY1m88HNj/ntDY9AnTPBYbTxXEAIUJE6OCSoWYDdb0QvPF6msQuP1">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="16AymdJMCy911eg6TuT+0NVQihlmD8WCF6OW25hEAq9PA6FfxID8Wq8ivvg2Q6YY2Tm81sCMeL2s+e5OE3B/n0KLS+ov0iSyKCPcLv3D0osx1y9eNE8jtXssQ7Kuxugo">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Opa! Já recebemos sua mensagem, e em muito breve responderemos.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
